src/api-explorer.css
body {
    padding-top: 70px;
    font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
}

.nav,
.pagination,
.carousel,
.panel-title a {
    cursor: pointer;
}

.md-tab{
    height: 65vh;
}

.md-button{
    padding: 0 0 0 0;
    border-radius: 0px;
}

.md-menu{
    padding: 0 0 0 0;
    margin: 0 0 0 0;
}

#jsonViewer {
    position: relative;
    height: 65vh;
    background: rgb(230, 230, 230);
    border: 1px solid #ccc;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    margin-top: 10px;
}

#responseHeaders{
    position: relative;
    background: rgb(230, 230, 230);
    border: 1px solid #ccc;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    margin-top: 10px;
}

#jsonEditor {
    position: relative;
    height: 15vh;
    border: 1px solid #ccc;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    margin-top: 10px;
}

#jsonEditorHeaders {
    position: relative;
    height: 15vh;
    border: 1px solid #ccc;
    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
    margin-top: 10px;
}

#duration {
   padding: 5px;
    color: #4685e2;
    margin: 10px;
}

#queryBar {
    border-right: 0;
}

.form-control {
    border-radius: 0;
}

.ace_link_marker {
    position: absolute;
    border-bottom: 1px solid blue;
}

.panel {
    margin-bottom: 20px;
    background-color: #fff;
    border: 1px solid transparent;
    border-radius: 4px;
    border-color:#ddd;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
    color: #333;
}

.main-query{
    width: 100%;
}

#adminConsent{
    background-color: #4685e2;
    color: #FFFFFF;
    padding-left: 1em;
}

.panel-heading{
    color: #333;
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.42857143;    
    background-color: #f5f5f5;
    border-color: #ddd;
}

.accordion-toggle
.ng-binding{
    color:rgba(51,51,51,1);
    font-size:18px;
}

.historyItem{
    border-top: 1px solid #808080;
}

.historyIcon{
    min-height: 100%;
    min-width: 100%;
}

.historyUrl{
    padding-right: 10px;
}

.historyTable th{
   color: #707070;
   font-size: 14px;
   font-weight: 700;
}

.historyTable td, .historyTable th{
    padding: 10px;
}

.historyTable td, .historyTable tr, .historyTable th{
    border: 1px dotted #707070;
}

.historyRow:hover {
    background-color: #ECECEC;
}

.editorLabel p{
   color: #707070;
   font-size: 14px;
   padding-left: 2em;
   font-weight: 500;
}


/* css classses for coloring back links based on success/failure */
.success{
    color: #92C700;
}

.error{
    color: #FF6A00;
    border-left: 1px solid #808080;
}

.loginDialog{
    padding: 5%;
}

.hidden{
    visibility: hidden;
}

.not-hidden{
     visibility: visible;
}

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
  display: none !important;
}

